Change/update JS goals

--- a/Javascript/Sylviale101-JS.html
+++ b/Javascript/Sylviale101-JS.html
@@ -227,9 +227,9 @@
                     <br>
                     - Once a number is selected, display whatever was selected at the button press
                     <br>
-                    - Use a conditional to check whether the number was even or odd and print
+                    - Use a conditional to check whether the number was even or odd and print the number
                     <br>
-                    - Use a while loop that adds the sum of the selected numbers that resets at 20
+                    - Use a for loop to multiply the random number by itself
                 </p>
                 <!--Button Mechanic-->
                 <button onclick="changeNum()">Click to change the number.</button>
