added a animated click-here button

--- a/animationXC/ko-fi.html
+++ b/animationXC/ko-fi.html
@@ -6,8 +6,6 @@
 </head>
 <body>
 <h1>Would you like to buy me a ko-fi?</h1>
-    <p>
-        Please <a href=https://ko-fi.com/>click here!</a> Thank you!
-    </p>
+    <button class="button"><a href="https://ko-fi.com/">Click Here!</a></button>
 </body>
 </html>
