added an image disclaimer

--- a/animationXC/ko-fi.html
+++ b/animationXC/ko-fi.html
@@ -6,6 +6,13 @@
 </head>
 <body>
 <h1>Would you like to buy me a ko-fi?</h1>
+    <img src="/Images/ko-fi.PNG">
+    <br>
+    <br>
     <button class="button"><a href="https://ko-fi.com/">Click Here!</a></button>
+    <br>
+    <p>
+        Disclaimer: Image copyright credits belong to ko-fi
+    </p>
 </body>
 </html>
