--- a/Individualproject/landingpage.html
+++ b/Individualproject/landingpage.html
@@ -48,6 +48,8 @@
             <!--https://lily-cs.github.io/Team2CascadingStyleSheet/SylviasCSS/Sylviale101.html-->
             <li><a class="dropdown-item" href="https://sylviale101.github.io/Individualproject/bootstrappage.html">Bootstrap Page</a></li>
             <!--https://sylviale101.github.io/Team2HTML/Sylviale101.html-->
+            <li><a class="dropdown-item" href="https://Sylviale101.github.io/Javascript/Sylviale101-JS.html">Javascript Page</a></li>
+            <!--https://Sylviale101.github.io/Javascript/Sylviale101-JS.html-->
             <li><hr class="dropdown-divider"></li>
           </ul>
         </li>
