--- a/Individualproject/landingpage.html
+++ b/Individualproject/landingpage.html
@@ -99,7 +99,7 @@
     </class>
     <!--Javascript webpage holder-->
     <class id="javascript"
-      <a href="">
+      <a href="https://Sylviale101.github.io/Javascript/Sylviale101-JS.html">
         <img alt="javascript page" class="figure-img img-fluid rounded" src="/Images/jsplaceholder.PNG"
       </a>
     </class>
