--- a/Individualproject/landingpage.html
+++ b/Individualproject/landingpage.html
@@ -98,7 +98,7 @@
      </a>
     </class>
     <!--Javascript webpage holder-->
-    <class id="javascript"
+    <class id="javascript">
       <a href="https://Sylviale101.github.io/Javascript/Sylviale101-JS.html">
         <img alt="javascript page" class="figure-img img-fluid rounded" src="/Images/jsplaceholder.PNG"
       </a>
